@@ -1,4 +1,6 @@
 DIST epson-inkjet-printer-escpr-1.3.0-1lsb3.2.tar.gz 1731621 SHA256 0ad1e003fff68782906ae47e0b3b3a6c9a151cae27f09d3e5f272513d43280de SHA512 9a3f0f761c51942d57568fb248bca9daad53937fbe1acc9ba44ae0bb167729fe06fc025ba99dd1ac91743d73319dbe8c8bb6d74dd678ee2c3e850717f290a630 WHIRLPOOL 3aedfcd47bed9384f225431b4f0db474e82060c25140be16b713811b5731ebdddf71828edf8193f263b39cc2bc76b16ae4edbf769cd9b6dae26c0e77b6f1fae3
+DIST epson-inkjet-printer-escpr-1.4.4-1lsb3.2.tar.gz 2432872 SHA256 bec7c51d11d96b6448bd96b5e9ac622786e3fc5024e13cae2fc248f8858db2f6 SHA512 7a3f1f880dba9048773d051cfe54ea2ee929d82a85efb496d4df4b84b33ed2f48bb6020892615d5d22da6b5671501b82df55cea6e11b35fea392392f115a6330 WHIRLPOOL 856bcffc4fe45c6bb15c7ecbe1c41e315ee68bf2c3c93697ac4f314324e2b3a0a8796ba741c04e962f1ca9148dbf38d529649ffd5d7ddaaa757666ea066e32a0
 EBUILD epson-inkjet-printer-escpr-1.3.0.ebuild 475 SHA256 d5d3956baec23492eb771bcbf80854ce46e52772cc148156473a678547ae12ed SHA512 253e1dab7ca103cc641824d908aeb62c9c989c6e64774efad1ebe8fdc4618435a012a90f97536bc76aac719dd7f6b593ce2e022a04ae4304f88b70645c57b7e4 WHIRLPOOL ca7296603b161cd5d67467d475b86c69fc692829cf232c6e42bd486dd6ac510ee939615cbd451db4748e7b82f7cad41b057ae71ec32a5460a9fbaad4ab28f845
-MISC ChangeLog 577 SHA256 90e7e48941a6c93597d08eef37a33cb3daacd9f408e66965439752269c5124df SHA512 3c2b718eb3282fea55bf1476706f7b42d7a869c08b6498e4f6b325e71d0ca750036f845a84a3c341941e4b6e9bb383d3ff5d35c4c7a7afec265778a4b9ed0500 WHIRLPOOL 30f5170ffab6a25ae087fd9f1df0ac86c6c54b3641e5207b00a7a369acb053bd0f824fe53d1f7a95f1c52342dd7aefd00b682d3c3f10b19d141526ab1684a052
+EBUILD epson-inkjet-printer-escpr-1.4.4.ebuild 475 SHA256 d5d3956baec23492eb771bcbf80854ce46e52772cc148156473a678547ae12ed SHA512 253e1dab7ca103cc641824d908aeb62c9c989c6e64774efad1ebe8fdc4618435a012a90f97536bc76aac719dd7f6b593ce2e022a04ae4304f88b70645c57b7e4 WHIRLPOOL ca7296603b161cd5d67467d475b86c69fc692829cf232c6e42bd486dd6ac510ee939615cbd451db4748e7b82f7cad41b057ae71ec32a5460a9fbaad4ab28f845
+MISC ChangeLog 746 SHA256 594dfff88707018264a7c6e091d3e89ef09b783dd59ccd0e199e569d0a190a46 SHA512 21c29892f506223e35c0a80c7eb792587b39ff7f56b032893678113d1b3b33ab9d66ea59b7870fa45e67d29e8ecf1eed904f349e859db118031b36eb1eaa7cc9 WHIRLPOOL c783aaca570b52c50e164d1b90db072d19d0b7043c34adaaa02eb1d0da62aed4fc8cbe38c033e10cdc20254a47dfdf75a6d6fbe1fa7d82a5ed8c2bb015f57282
 MISC metadata.xml 294 SHA256 2aced38bd561ba11ed788a085ca34f258e3fdb0880160dfd2831036f47248074 SHA512 587b2adc888c65368fd19b401a4a275fbecaa85a8726874c02ddcc141fc9bf6ed420870c2f5fc3ff70e81d8efe262ce4fc6e429215fe0fa845d3665745ae05ce WHIRLPOOL a089bfc570903e97cbd6e275f16363300453d254f24ba8d2c23eaf62209201cfb50ae4e49de65e2584c8c9ed1fac02986304a6a4233824d2f96ccf2f77abdc06
