@@ -2,11 +2,17 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-  24 May 2014; YAMAGATA Fumihiro <bunbun042000@gmail.com>
-  +epson-inkjet-printer-escpr-1.3.0.ebuild:
+*epson-inkjet-printer-escpr-1.4.4 (30 Nov 2014)
+
+  30 Nov 2014; YAMAGATA Fumihiro <bunbun042000@gmail.com>
+  +epson-inkjet-printer-escpr-1.4.4.ebuild:
   Version update
 
 *epson-inkjet-printer-escpr-1.3.0 (24 May 2014)
+
+  24 May 2014; YAMAGATA Fumihiro <bunbun042000@gmail.com>
+  +epson-inkjet-printer-escpr-1.3.0.ebuild:
+  Version update
 
 *epson-inkjet-printer-escpr-1.1.1 (10 Jan 2012)
 
